리뷰수정기본틀작성

--- a/base/static/common.css
+++ b/base/static/common.css
@@ -26,8 +26,16 @@
   display: block;
 }
 
+.t-flex {
+  display: flex;
+}
+
 .t-grid {
   display: grid;
+}
+
+.t-hidden {
+  display: none;
 }
 
 .t-cursor-pointer {
