--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,13 +6,14 @@
 <head>
     <meta charset="UTF-8">
     <title>세상에 나쁜 라켓은 없다</title>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+    <!--bootstrap.min.js 는 jquery-3.0.0.min.js를 필요로 하므로 jquery-3.0.0.min.js를 먼저 적어주어야 한다. 순서에 유의-->
+    <!-- jQuery JS -->
+    <script src="{% static 'jquery-3.6.0.min.js' %}"></script>
+    <!-- pybo CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
-
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-
+    <!-- Bootstrap JS -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
 
 
@@ -59,7 +60,7 @@
         {%if user.is_authenticated%}
 
         <a href="{%url 'account:logOut'%}">
-            <button type="button" class="btn btn-dark">로그아웃</button>
+            <button type="button" class="btn btn-dark">로그인중 ({{user.username}}) 클릭시 로그아웃</button>
         </a>
 
         {% else %}
@@ -77,6 +78,10 @@
 
 {% endblock %}
 
+
+{% block script %}
+
+{% endblock %}
 
 </body>
 </html>
