--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,7 +60,7 @@
         {%if user.is_authenticated%}
 
         <a href="{%url 'account:logOut'%}">
-            <button type="button" class="btn btn-dark">로그인중 ({{user.username}}) 클릭시 로그아웃</button>
+            <button type="button" class="btn btn-dark">로그인중 ({{user.username}}) ▶ 클릭시 로그아웃</button>
         </a>
 
         {% else %}
