--- a/base/static/common.base.css
+++ b/base/static/common.base.css
@@ -41,3 +41,12 @@ html > body :is(h1, h2, h3, h4, h5, h6) {
 html > body .hidden{
     display:none
 }
+
+.checked {
+    color: red
+}
+
+.my-btn{
+    background-color: inherit !important;
+    border: 0 !important;
+}
