--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,11 @@
     <!-- Bootstrap JS -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome-stars.css">
+
+    <script src="{%static 'main.js'%}" defer></script>
+
 
 </head>
 
