--- a/templates/racket/racketMain.html
+++ b/templates/racket/racketMain.html
@@ -6,49 +6,45 @@
     <h1 class="d-flex justify-content-center mt-7 t-text-[60px] bannerfont">테니스 라켓 콘텐츠</h1>
     <h3 class="d-flex justify-content-center mt-4 t-mb-9 t-text-[20px] bannerfont">Powered by '세상에 나쁜 라켓은 없다' since
         2013</h3>
-    <h4 class="d-flex justify-content-center mt-4 t-mb-9 t-text-[15px] ">라켓은 계속 추가됩니다! ╰(*°▽°*)╯</h4>
+    <h4 class="d-flex justify-content-center mt-4 t-mb-9 t-text-[15px] ">라켓은 계속 추가됩니다! ╰( °▽° )╯</h4>
 
-    <div class="navbar navbar-expand-lg d-flex justify-content-between navbar-dark bg-dark mr-auto"
-         aria-label="Tenth navbar example">
-        <div class="">
-            <form class="d-flex mr-auto" action="{% url 'racket:racketMain'%}">
-                <input class="form-control ml-2" type="search" name="searchKeyword" placeholder="라켓 이름을 적어주세요"
+    <div class="t-grid sm:t-grid-cols-2 py-2 px-2 navbar-dark bg-dark">
+        <div>
+
+            <form class="" action="{% url 'racket:racketMain'%}">
+                <input class="form-control-lg t-ml-[3px]" type="search" name="searchKeyword" placeholder="라켓 이름을 적어주세요"
                        value="{{request.GET.searchKeyword}}">
-                <button type="submit" class="btn btn-warning t-whitespace-nowrap">검 색</button>
+                <button type="submit" class="btn btn-warning t-ml-[3px]">검 색</button>
             </form>
-        </div>
+</div>
+<div class="btn-group ml-auto">
+  <button type="button" class="btn btn-warning dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+    이곳에 정렬순 구현하기⛔
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="#">Separated link</a></li>
+  </ul>
+</div>
 
-        <div class=" collapse navbar-collapse ">
-            <ul class="">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle btn btn-warning" href="#" id="dropdown08"
-                       data-bs-toggle="dropdown"
-                       aria-expanded="false">정렬순</a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdown08">
-                        <li><a class="dropdown-item" href="#">이름순</a></li>
-                        <li><a class="dropdown-item" href="#">발매순</a></li>
-                        <li><a class="dropdown-item" href="#">평점순</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
     </div>
-
 
     <section class="t-block section-racket-list t-bg-gray-200 pt-4">
         <ul class="t-grid sm:t-grid-cols-2 md:t-grid-cols-3 lg:t-grid-cols-4 xl:t-grid-cols-5 t-gap-5">
             {%for item in racketItems%}
-            <li class="mx-3">
-                <a data-before="자세히" href="{%url 'racket:racketDetail' item.id%}" class="t-block t-cursor-pointer ">
-                    <img src="{{item.thumb_img_url}}"
-                         height="250" class=" w-100 "><br>
+            <li class="group">
+                <a href="{%url 'racket:racketDetail' item.id%}" class="t-block t-cursor-pointer block overflow-hidden relative">
+                    <img src="{{item.thumb_img_url}}" style="aspect-ratio: 1 / 1" height="%" width="200" class="w-100 block transition-all group-hover:scale-[150%]"><br>
                 </a>
 
                 <div class="d-flex justify-content-center t-bg-gray-300 ">
                     <ul>
                         <li> {{item.name}} ({{item.regDateInt}}년)</li>
-                        <li>세나라 평점 : <span class="t-text-red-500">4.5</span></li>
-                        <li>사용자 평점 : <span class="t-text-red-500">4.5</span></li>
+                        <li>세나라 평점 : <span class="t-text-red-500">세나라 점수 띄우기⛔</span></li>
+                        <li>사용자 평점 : <span class="t-text-red-500">사용자 점수 띄우기⛔</span></li>
                     </ul>
                 </div>
             </li>
